k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hlads-web
  namespace: hlads-web-ns
  labels:
    app: hlads-web
spec:
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: hlads-web
  template:
    metadata:
      labels:
        app: hlads-web
    spec:
      containers:
      - name: hlads-web
        image: registry.digitalocean.com/hlads/hlads_react_web:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
          limits:
            memory: "350Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
