k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hlads-web-service
  namespace: hlads-web-ns
spec:
  selector:
    app: hlads-web
  ports:
    - protocol: TCP
      name: http
      port: 80 # Default port for image
