k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hlads-webingress
  namespace: hlads-web-ns
spec:
  tls:
  - hosts:
    - hlads.net
    secretName: hlads-webtls
  rules:
  - host: hlads.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hlads-webservice
            port:
              number: 80
